force-app/main/default/objects/b2c_customer__c/fields/preferredLanguage__c.field-meta.xml
<CustomField>
    <fullName>preferredLanguage__c</fullName>
    <description>Customer preferred language</description>
    <inlineHelpText>Customer preferred language</inlineHelpText>
    <label>Preferred Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arabic</fullName>
            </value>
            <value>
                <fullName>Brazilian Portugeuse</fullName>
            </value>
            <value>
                <fullName>Catalan</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Simplified Chinese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Turkish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>