force-app/main/default/objects/b2c_customer__c/fields/primaryVillage__c.field-meta.xml
<CustomField>
    <fullName>primaryVillage__c</fullName>
    <description>Customer&apos;s primary village</description>
    <inlineHelpText>Customer&apos;s primary village</inlineHelpText>
    <label>Primary Village</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>FV</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>LZ</fullName>
            </value>
            <value>
                <fullName>MV</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>WV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>