force-app/main/default/objects/b2c_customer__c/fields/Reachable__c.field-meta.xml
<CustomField>
    <fullName>Reachable__c</fullName>
    <formula>IF(  

NOT(ISBLANK(email__c)) 
&amp;&amp;   NOT(ISPICKVAL(optInEmail__c  , &quot;False&quot;))
&amp;&amp;  LEN( mobile__c ) &gt; 8
&amp;&amp;  NOT(ISPICKVAL(optInMobile__c  , &quot;False&quot;))
&amp;&amp; NOT(ISBLANK( address1__c ))
&amp;&amp; NOT(ISPICKVAL( optInPostal__c , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false




,&quot;Postal and Email and Mobile Reachable&quot;, 


IF(NOT(ISBLANK(email__c)) 
&amp;&amp;   NOT(ISPICKVAL(optInEmail__c  , &quot;False&quot;))
&amp;&amp;  LEN( mobile__c ) &gt; 8
&amp;&amp;  NOT(ISPICKVAL(optInMobile__c  , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false

,&quot;Email and Mobile Reachable&quot;,



IF(NOT(ISBLANK(email__c)) 
&amp;&amp;   NOT(ISPICKVAL(optInEmail__c  , &quot;False&quot;))
&amp;&amp; NOT(ISBLANK( address1__c ))
&amp;&amp; NOT(ISPICKVAL( optInPostal__c , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false
,&quot;Postal and Email Reachable&quot;,


IF(
LEN( mobile__c ) &gt; 8
&amp;&amp;  NOT(ISPICKVAL(optInMobile__c  , &quot;False&quot;))
&amp;&amp; NOT(ISBLANK( address1__c ))
&amp;&amp; NOT(ISPICKVAL( optInPostal__c , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false

,&quot;Postal and Mobile Reachable&quot;,

IF(LEN( mobile__c ) &gt; 8
&amp;&amp;  NOT(ISPICKVAL(optInMobile__c  , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false

,&quot;Mobile Reachable&quot;,

IF(NOT(ISBLANK( address1__c ))
&amp;&amp; NOT(ISPICKVAL( optInPostal__c , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false

,&quot;Postal Reachable&quot;,

IF(NOT(ISBLANK(email__c)) 
&amp;&amp;   NOT(ISPICKVAL(optInEmail__c  , &quot;False&quot;))
&amp;&amp;  isRetiredDuplicate__c = false

,&quot;Email Reachable&quot;,&quot;NOT Reachable&quot;)

)
)
)
)
)
)</formula>
    <label>Reachable</label>
    <type>Text</type>
</CustomField>