force-app/main/default/objects/b2c_customer__c/fields/retentionScore__c.field-meta.xml
<CustomField>
    <fullName>retentionScore__c</fullName>
    <description>Will the customer shop again next year - defined by surveys on a 1-7 like RT Scale</description>
    <inlineHelpText>Will the customer shop again next year - defined by surveys on a 1-7 like RT Scale</inlineHelpText>
    <label>Retention Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>