force-app/main/default/objects/b2c_customer__c/fields/salutation__c.field-meta.xml
<CustomField>
    <fullName>salutation__c</fullName>
    <description>Salutation</description>
    <inlineHelpText>Salutation</inlineHelpText>
    <label>Salutation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>