force-app/main/default/objects/b2c_customer__c/fields/socialMediaIndex__c.field-meta.xml
<CustomField>
    <fullName>socialMediaIndex__c</fullName>
    <description>Calculated score from Facebook that indicates how Socially aware they are</description>
    <inlineHelpText>Calculated score from Facebook that indicates how Socially aware they are</inlineHelpText>
    <label>Social Media Index</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>