force-app/main/default/objects/b2c_customer__c/fields/spendInLast12Months__c.field-meta.xml
<CustomField>
    <fullName>spendInLast12Months__c</fullName>
    <description>Customer spend in last 12 months</description>
    <inlineHelpText>Customer spend in last 12 months</inlineHelpText>
    <label>Spend In Last 12 Months</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>