force-app/main/default/objects/b2c_customer__c/fields/villageExperienceRating__c.field-meta.xml
<CustomField>
    <fullName>villageExperienceRating__c</fullName>
    <description>From survey to indicate how Customers experience of Village was rated</description>
    <inlineHelpText>From survey to indicate how Customers experience of Village was rated</inlineHelpText>
    <label>Village Experience Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>