force-app/main/default/objects/b2c_customer__c/fields/villagesOfInterest__c.field-meta.xml
<CustomField>
    <fullName>villagesOfInterest__c</fullName>
    <description>Semi-colon (;) delimited list of villages the customer has expressed an interest in.</description>
    <inlineHelpText>Semi-colon (;) delimited list of villages the customer has expressed an interest in.</inlineHelpText>
    <label>Villages of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>FV</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>LZ</fullName>
            </value>
            <value>
                <fullName>MV</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>WV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>