force-app/main/default/objects/b2c_customer__c/fields/villagesVisited__c.field-meta.xml
<CustomField>
    <fullName>villagesVisited__c</fullName>
    <description>Cumulative list of Villages Visited based by Surveys and Touch Points</description>
    <inlineHelpText>Cumulative list of Villages Visited based by Surveys and Touch Points</inlineHelpText>
    <label>Villages Visited</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>FV</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>LR</fullName>
            </value>
            <value>
                <fullName>LV</fullName>
            </value>
            <value>
                <fullName>LZ</fullName>
            </value>
            <value>
                <fullName>MV</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>SV</fullName>
            </value>
            <value>
                <fullName>WV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>