force-app/main/default/objects/b2c_customer__c/fields/visitFrequency__c.field-meta.xml
<CustomField>
    <fullName>visitFrequency__c</fullName>
    <description>Based on any of the touch points, averaged over a period of time series defined by Business Rule</description>
    <inlineHelpText>Based on any of the touch points, averaged over a period of time series defined by Business Rule</inlineHelpText>
    <label>Visit Frequency</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>