force-app/main/default/objects/b2c_customer__c/validationRules/Changing_Opt_In_Third_Party_to_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Opt_In_Third_Party_to_Null</fullName>
    <active>true</active>
    <description>Rule to prevent opt in value changing from a populated value to null.</description>
    <errorConditionFormula>IF( ISBLANK( TEXT( optInThirdParty__c ) ) &amp;&amp; NOT(ISBLANK( PRIORVALUE(optInThirdParty__c ) )) , TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>optInThirdParty__c</errorDisplayField>
    <errorMessage>Cannot revert Opt-in value to a null value. Please select false if you wish to remove Opt-in preference.</errorMessage>
</ValidationRule>