force-app/main/default/objects/b2c_customer__c/listViews/All_Today_Fidenza.listView-meta.xml
<ListView>
    <fullName>All_Today_Fidenza</fullName>
    <columns>NAME</columns>
    <columns>leadSource__c</columns>
    <columns>leadSourceText__c</columns>
    <columns>primaryVillage__c</columns>
    <columns>email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>primaryVillage__c</field>
        <operation>contains</operation>
        <value>FV</value>
    </filters>
    <label>All Today Fidenza</label>
</ListView>