force-app/main/default/objects/b2c_customer__c/listViews/All_Today_MWL.listView-meta.xml
<ListView>
    <fullName>All_Today_MWL</fullName>
    <columns>NAME</columns>
    <columns>leadSource__c</columns>
    <columns>leadSourceText__c</columns>
    <columns>primaryVillage__c</columns>
    <columns>email__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>B2C ODS API</value>
    </filters>
    <label>All Today MWL</label>
    <language>en_US</language>
</ListView>